# AgentInterOp

./: .bashrc_aliases  .editorconfig  .gitignore  .replit  CLAUDE.md  COMPREHENSIVE_ANALYSIS.md  DEMO_GUIDE.md  DEMO_INSTRUCTIONS.md  DEMO_PLAYBOOK.md  DEMO_QUICK_START.md  DEPLOYMENT.md  IMPROVEMENTS_SUMMARY.md  INTEGRATION_GUIDE.md  LICENSE  Makefile  README.md  REPORT.md  SECURITY_PATCHES.md  YC_DEMO_DAY_CHEAT_SHEET.md  YC_IMPLEMENTATION_CHECKLIST.md  YC_PITCH_RECOMMENDATIONS.md  deploy_ui.py  final_test_results.json  gunicorn.conf.py  main.py  mcp_test_results.json  package.json  playwright.config.ts  pyproject.toml  replit.md  run_fastapi.py  simple_main.py  start.py  start_optimized.py  start_server.py  test_a2a_spec.py  test_age_detection.py  test_care_commons.py  test_conversation_flow.py  test_debug_flow.py  (+9 more)
.claude/: settings.local.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
api/: hello.py  index.py  requirements.txt
app/: a2a_router.py  a2a_store.py  config.py  config.runtime.json  engine.py  main.py
app/agents/: administrator.py  applicant.py  clinical_informaticist.py  colonoscopy_scheduler.py  registry.py
app/api/: agents.py
app/banterop_ui/: __init__.py  a2a_proxy.py  agentcard_loader.py  bcs_guidelines.py  claude_integration.py  mcp_fhir_bridge.py  router.py  scenario_loader.py  scenario_models.py  scenario_runner.py
app/cards/: administrator-agent-card.json  applicant-agent-card.json  clinical-informaticist-card.json
app/data/: demo_artifacts.py
app/demo/: patient_001.json  patient_bcse.json
app/eligibility/: __init__.py  bcse.py
app/experimental/: claude_client.py  router.py
app/experimental_v2/: __init__.py  arbiter.py  autonomy.py  fhir_mapper.py  guidelines.py  router.py
app/fhir/: __init__.py  connector.py  service.py
app/ingest/: __init__.py  mapper.py
app/inspector/: __init__.py  router.py
app/llm/: __init__.py  anthropic.py
app/protocols/: a2a.py  a2a_bcse.py  a2a_cql_measure.py  mcp.py  mcp_bcse.py
app/routers/: clinical_informaticist.py  pages.py  (+2 more)
attached_assets/: Pasted--FINAL-PARTNER-TEST-PATCH-BCS-only-A2A-MCP-endpoints-discovery-canned-FHIR-SSE-error-code-1757203910573_1757203910574.txt  Pasted--Language-First-Interop-demo-hardening-Partner-Connect-Test-Harness-Persistence-Discovery--1757201356248_1757201356249.txt  Pasted--VERCEL-HARDENING-SAFE-MODE-PATCH-This-will-add-a-safe-wrapper-so-import-errors-sh-1757109980749_1757109980750.txt  Pasted--Vercel-make-Python-deps-install-add-a-tiny-hello-function-and-show-real-tracebacks--1757197459686_1757197459689.txt  Pasted-Add-a-global-config-model-endpoints-Create-app-config-py-and-wire-load-save-update-with-sane-defa-1756937669467_1756937669468.txt  Pasted-Expose-scenario-list-switch-endpoints-Add-small-admin-APIs-and-link-from-UI-In-app-main-py-add--1756938683653_1756938683654.txt  Pasted-Implement-the-4-scenarios-custom-Create-modules-Create-files-app-scenarios-sc-bcse-py-app-sc-1756938165201_1756938165202.txt  Pasted-Ingestion-map-FHIR-Applicant-payloads-per-scenario-Create-file-app-ingest-mapper-py-from-dateti-1757094321785_1757094321785.txt
docs/: AGENT_MANAGEMENT.md  AGENT_STUDIO.md  EXPERIMENTAL_BANTEROP_UI.md  VERCEL_WEB_ANALYTICS.md  VOIP_INTEGRATION_PLAN.md
multi_agent_interoperability_demo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scenarios/: bcs_scenario.json
scripts/: ci_check.sh  verify_a2a.bat  verify_a2a.sh
templates/: index.html
tests/: conftest.py  requirements.txt  test_a2a_stream.py  test_bcse_evaluator.py  test_protocols_integration.py  test_scheduling.py  test_smoke.py
tools/: demo_templates.sh  smoke_a2a.sh
(+95 files in other folders)
